# The-Best-App-in-the-World

./: CMakeLists.txt  README.md
asm/: bishop_attacks.asm  king_attacks.asm  knight_attacks.asm  pawn_attacks.asm  popcount.asm  queen_attacks.asm  rook_attacks.asm  uctScore.asm
include/core/: Bishop.hpp  Board.hpp  Evaluator.hpp  King.hpp  Knight.hpp  Move.hpp  Pawn.hpp  Piece.hpp  Queen.hpp  Rook.hpp  Types.hpp
include/engine/: Dijkstra.hpp  MCTS.hpp  Search.hpp  Stockfish.hpp
include/gui/: InputHandler.hpp  Menu.hpp  Renderer.hpp  Spiral.hpp
include/utils/: Bitboard.hpp  Convert.hpp  Types.hpp
src/: main.cpp
src/core/: Bishop.cpp  Board.cpp  Evaluator.cpp  King.cpp  Knight.cpp  Move.cpp  Pawn.cpp  Piece.cpp  Queen.cpp  Rook.cpp
src/engine/: Dijkstra.cpp  MCTS.cpp  Search.cpp  Stockfish.cpp
src/gui/: InputHandler.cpp  Menu.cpp  Renderer.cpp  Spiral.cpp
src/utils/: Bitboard.cpp  Convert.cpp  Logger.cpp
